# Simula

./: Cargo.toml  LICENSE  README.md
src/: application.rs  main.rs  runner.rs  scene.rs
src/algorithm_processor/: algorithm.rs  mod.rs
src/application/: algorithm_catalog.rs  components.rs  mod.rs  shared_context.rs  wininit_wrapper.rs
src/gui/: controls.rs
src/rendering/: generic_pipeline.rs  image_writer.rs  mod.rs  scene.rs  vertex.rs  webgpu_wrapper.rs  wgpu_wrapper.rs
src/rendering/assets/: mod.rs  textures.rs
src/rendering/liquid_crystal_latice/: mod.rs  scene.rs  scene_generation.rs
src/rendering/renderers/: background_renderer.rs  mod.rs
src/rendering/shader/: 2d_liquid_crystal_latice.wgsl  textured_polygon.wgsl
src/shader/: shader.wgsl  texture_shader.wgsl
src/widgets/: mod.rs  texture.rs  textured_widget.rs
