[package]
name = "Simula"
version = "0.1.0"
authors = ["Kalin <kalindimitrovv@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.13.1", features = ["wgpu"] }
iced_widget = { version = "0.13.1", features = ["wgpu"] }
iced_winit = "0.13.0"
iced_wgpu = { version = "0.13.1", features = [] }
bytemuck = { version = "1.21.0", features = ["derive"] }
tracing-subscriber = "0.3"
image = "0.25.5"
