[package]
name = "Simula"
version = "0.1.0"
authors = ["Kalin <kalindimitrovv@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
iced = { version = "0.13.1", features = ["wgpu"] }
iced_widget = { version = "0.13.1", features = ["wgpu", "image"] }
iced_winit = "0.13.0"
iced_wgpu = { version = "0.13.1", features = [] }
bytemuck = { version = "1.21.0", features = ["derive"] }
crossbeam = "0.8.4"
tracing-subscriber = "0.3"
image = "0.25.5"
rand = "0.9.0"
rfd = "0.15.2"
rav1e = "0.7.1"
